BUG-1365 : Make header stay put and more readable

--- a/valinta-tulos-service/src/main/webapp/css/puuttuvat_tulokset.css
+++ b/valinta-tulos-service/src/main/webapp/css/puuttuvat_tulokset.css
@@ -1,3 +1,11 @@
+.heading {
+    position: fixed; z-index: 2; background-color: lightsteelblue; padding: 10px;
+}
+
+#haku-list {
+    position: relative; top: 200px;
+}
+
 .ajax-indicator {
     position: absolute; margin: 0; visibility: hidden;
 }
